Fix overflow issue

--- a/react-resume-template/src/globalStyles.scss
+++ b/react-resume-template/src/globalStyles.scss
@@ -13,6 +13,7 @@
     -ms-overflow-style: none;
     /* IE and Edge */
     scrollbar-width: none;
+
     /* Firefox */
   }
 }
@@ -22,6 +23,12 @@
     height: -webkit-fill-available;
   }
 }
+
+body {
+  overflow-x: hidden;
+}
+
+.nextJsImage {}
 
 /* Global styles */
 * {
@@ -62,7 +69,7 @@ th {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  transition: all 0.3s ease-in-out;
+  transition: all 2s ease-in-out;
   overflow: hidden;
   z-index: 999;
   padding: 40px 20px 20px;
@@ -122,6 +129,7 @@ th {
 }
 
 .modal-description {
+
   font-size: .7rem;
   padding-left: 5%;
   padding-right: 5%;
@@ -167,4 +175,9 @@ th {
 
 a:hover {
   cursor: pointer;
+}
+
+.nextJsImage {
+
+  overflow-y: scroll
 }
